fixed font color of input

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="container mt-5">
       <h1 class="text-4xl text-white">Enter a word</h1>
       <form>
-        <input id="input" class="w-80 h-12 mx-auto my-5 bg-slate-900 block rounded text-center text-slate-900" type="text" >
+        <input id="input" class="w-80 h-12 mx-auto my-5 bg-slate-900 block rounded text-center" type="text" >
         <button id="submit" class="w-32 h-9 bg-slate-900 rounded shadow-xl hover:bg-slate-800 tracking-wide">Submit</button>
       </form>
     </div>
